fix totop for z-index

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -615,6 +615,7 @@ footer a {
   right: 25px;
   bottom: 25px;
   display: none;
+  z-index: 10000;
 }
 /*无内容样式*/
 .nothings {
